syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message HomeResource {
	uint32 store_value = 1;
	uint32 store_limit = 2;
	uint32 next_refresh_time = 3;
}
