syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "HomeResource.proto";

// CmdId: 4500
// EnetChannelId: 0
// EnetIsReliable: true
message HomeResourceTakeFetterExpRsp {
	int32 retcode = 1;
	HomeResource fetter_exp = 3;
}
